addition of citibike.py

--- a/How_New_Yorkers_Bike_Notebook.ipynb
+++ b/How_New_Yorkers_Bike_Notebook.ipynb
@@ -18991,12 +18991,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x9f7db90>"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cur.execute(\"DELETE FROM available_bikes\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -19005,7 +19018,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "c"
+   ]
   }
  ],
  "metadata": {
